--- a/Core.vcxproj
+++ b/Core.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="Log.h" />
     <ClInclude Include="MemoryManager.h" />
     <ClInclude Include="OS.h" />
+    <ClInclude Include="Semaphore.h" />
     <ClInclude Include="Stopwatch.h" />
     <ClInclude Include="Str.h" />
   </ItemGroup>
