--- a/Core.vcxproj
+++ b/Core.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="JsonNode.cpp" />
     <ClCompile Include="JsonParser.cpp" />
     <ClCompile Include="Log.cpp" />
+    <ClCompile Include="OS.cpp" />
     <ClCompile Include="Str.cpp" />
   </ItemGroup>
   <ItemGroup>
